# jupyter-notebooks

./: .gitignore  Dockerfile  README.md  bootstrap.sh  docker-compose.yml  jupyter-linux.sh  pyproject.toml  tasks.json
.github/workflows/: jupyter.yml
dev/: CFMM.py  amm_model.py  arb.py
kernel/cfmm/dev/: amm_model.py  requirements.txt  test.py  utils.py
kernel/mev/: eth2-mev-calc.py
notebooks/: .gitignore  environment_setup.ipynb  install.sh  requirements.txt  setup.sh  staking_report_generator.ipynb  sushiswap_liquiditypairs.ipynb
notebooks/models/ecosystem_model/data/temp json/: sim.json  sim_columns.json  sim_index.json  sim_values.json
notebooks/models/ecosystem_model/experiments/: README.md  default_experiment.py  post_processing.py  run.py  simulation_configuration.py  utils.py
notebooks/models/ecosystem_model/experiments/notebooks/: 0_README.ipynb  1_Model_Validation.ipynb  2_Adoption_Scenarios.ipynb  3_Client_Allocation.ipynb  setup.py
notebooks/models/ecosystem_model/experiments/templates/: time_domain_analysis.py
notebooks/models/ecosystem_model/model/: __init__.py  constants.py  policy_functions.py  state_update_blocks.py  state_update_functions.py  state_variables.py  system_parameters.py  types.py  utils.py
notebooks/models/host-model/: Host-KPIs.ipynb
notebooks/server/: server.py
scripts/: fix-perm.sh  pip-init.sh  preinstall.sh  start-notebook.sh  start.sh
server/: docker-compose.yml  main.py  requirements.txt  worker.py
test/jupyter/: notebook.test.sh
(+3 files in other folders)
