[tool.poetry]
name = "manifold-jupyter"
version = "0.1.0"
description = "Jupyter Notebooks"
authors = ["sam bacha <sam@manifoldfinance.com>"]
license = "SEE LICENSE IN LICENSE"

[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1.8.1"
pandas = "^1.4.3"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
